Defined predictive task

--- a/Data Science/Data/data_generator.ipynb
+++ b/Data Science/Data/data_generator.ipynb
@@ -186,7 +186,7 @@
     "num_carts = 5\n",
     "num_steps_per_cart = 1000\n",
     "time_interval = 1.0  # seconds\n",
-    "wheel_radius = 0.3  # Adjust as needed\n",
+    "wheel_radius = 0.3  \n",
     "\n",
     "# Simulate wheel speed sensor data for each cart\n",
     "wheel_speed_data = []\n",
