--- a/Data Science/Code/data_analysis.ipynb
+++ b/Data Science/Code/data_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Data Analysis**"
+    "# **Data Exploration and Analysis**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "4  60.236258   456.516795  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "(5000, 14)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "max       4.999721     1.499916    34.998772    69.988824   999.952096  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,13 +463,186 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Latitude', 'Longitude', 'Altitude', 'Distance', 'Alignment',\n",
+       "       'Distance_Sensors', 'Proximity', 'Wheel_Speed', 'Velocity',\n",
+       "       'Hall_Effect', 'Emergency_Stop', 'Temperature', 'Humidity',\n",
+       "       'Light_Level'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alignment_conditions = [\n",
+    "    alignment == True for alignment in df[\"Alignment\"]\n",
+    "]\n",
+    "\n",
+    "# Adding labels for Chaining Alignment\n",
+    "df[\"Alignment_Label\"] = [\"Aligned\" if condition else \"Not_Aligned\" for condition in alignment_conditions]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define conditions for safety based on Hall_Effect and Emergency_Stop\n",
+    "safety_conditions = [\n",
+    "    hall_effect == True and emergency_stop == False\n",
+    "    for hall_effect, emergency_stop in zip(\n",
+    "        df[\"Hall_Effect\"],\n",
+    "        df[\"Emergency_Stop\"]\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "# Adding labels for Safety Decision\n",
+    "df[\"Safety_Label\"] = [\"Safe\" if condition else \"Unsafe\" for condition in safety_conditions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Speed thresholds (in meters per second - m/s)\n",
+    "threshold_high_speed = 1.5  \n",
+    "\n",
+    "# Distance thresholds (in meter)\n",
+    "threshold_low_distance = 0.5 \n",
+    "\n",
+    "# Temperature thresholds (in degrees Celsius)\n",
+    "threshold_high_temperature = 30 \n",
+    "\n",
+    "# Light level thresholds (in Lux)\n",
+    "threshold_low_light = 100\n",
+    "\n",
+    "\n",
+    "collision_risk_levels = []\n",
+    "\n",
+    "for distance, proximity, wheel_speed, temperature, light_level in zip(\n",
+    "    df[\"Distance\"],\n",
+    "    df[\"Proximity\"],\n",
+    "    df[\"Wheel_Speed\"],\n",
+    "    df[\"Temperature\"],\n",
+    "    df[\"Light_Level\"]\n",
+    "):\n",
+    "    if proximity or wheel_speed > threshold_high_speed:\n",
+    "        collision_risk_levels.append(2)\n",
+    "    elif distance < threshold_low_distance:\n",
+    "        collision_risk_levels.append(1)\n",
+    "    elif temperature > threshold_high_temperature or light_level < threshold_low_light:\n",
+    "        collision_risk_levels.append(1)\n",
+    "    else:\n",
+    "        collision_risk_levels.append(0)\n",
+    "\n",
+    "\n",
+    "# Adding labels for Collision Avoidance\n",
+    "df[\"Collision_Avoidance_Label\"] = [\"Low_Risk\" if risk_level == 0 else \"Medium_Risk\" if risk_level == 1 else \"High_Risk\" for risk_level in collision_risk_levels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define acceptable distance thresholds for chaining \n",
+    "max_distance = 5.0  \n",
+    "min_distance = 2.0\n",
+    "\n",
+    "# Cart wheel speed treshold in meters per second (m/s) for chaining \n",
+    "high_speed = 1.5\n",
+    "\n",
+    "# Define conditions for chaining based on the data\n",
+    "chaining_conditions = [\n",
+    "    alignment and distance > min_distance and distance < max_distance and not proximity and wheel_speed < high_speed and safety_label == \"Safe\"\n",
+    "    for alignment, distance, proximity, safety_label, wheel_speed in zip(\n",
+    "        df[\"Alignment\"],\n",
+    "        df[\"Distance\"],\n",
+    "        df[\"Proximity\"],\n",
+    "        df[\"Safety_Label\"],\n",
+    "        df['Wheel_Speed']\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "# Adding labels for Chaining/Unchaining Decision\n",
+    "df[\"Chaining_Unchaining_Label\"] = [\"Chaining\" if condition else \"Unchaining\" for condition in chaining_conditions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined data with labels saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the updated combined data with labels to a new CSV file\n",
+    "df.to_csv(\"final_combined_data.csv\", index=False)\n",
+    "\n",
+    "print(\"Combined data with labels saved.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Latitude', 'Longitude', 'Altitude', 'Distance', 'Alignment',\n",
+       "       'Distance_Sensors', 'Proximity', 'Wheel_Speed', 'Velocity',\n",
+       "       'Hall_Effect', 'Emergency_Stop', 'Temperature', 'Humidity',\n",
+       "       'Light_Level', 'Alignment_Label', 'Safety_Label',\n",
+       "       'Collision_Avoidance_Label', 'Chaining_Unchaining_Label'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
