Initialized feature engineering

--- a/Data Science/Code/data_analysis.ipynb
+++ b/Data Science/Code/data_analysis.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
    ],
    "source": [
     "# Save the updated combined data with labels to a new CSV file\n",
-    "df.to_csv(\"final_combined_data.csv\", index=False)\n",
+    "df.to_csv(\"../Data/final_combined_data.csv\", index=False)\n",
     "\n",
     "print(\"Combined data with labels saved.\")"
    ]
@@ -647,10 +647,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude                     0\n",
+       "Longitude                    0\n",
+       "Altitude                     0\n",
+       "Distance                     0\n",
+       "Alignment                    0\n",
+       "Distance_Sensors             0\n",
+       "Proximity                    0\n",
+       "Wheel_Speed                  0\n",
+       "Velocity                     0\n",
+       "Hall_Effect                  0\n",
+       "Emergency_Stop               0\n",
+       "Temperature                  0\n",
+       "Humidity                     0\n",
+       "Light_Level                  0\n",
+       "Alignment_Label              0\n",
+       "Safety_Label                 0\n",
+       "Collision_Avoidance_Label    0\n",
+       "Chaining_Unchaining_Label    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
   }
  ],
  "metadata": {
