data re-generated

--- a/Data Science/Code/data_analysis.ipynb
+++ b/Data Science/Code/data_analysis.ipynb
@@ -84,88 +84,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37.800175</td>\n",
-       "      <td>-121.097884</td>\n",
-       "      <td>64.545603</td>\n",
+       "      <td>37.852811</td>\n",
+       "      <td>-121.572439</td>\n",
+       "      <td>52.355375</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>False</td>\n",
-       "      <td>1.423923</td>\n",
+       "      <td>3.525967</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.185937</td>\n",
+       "      <td>0.955781</td>\n",
        "      <td>False</td>\n",
-       "      <td>2.307947</td>\n",
-       "      <td>0.692384</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>31.484825</td>\n",
-       "      <td>31.292792</td>\n",
-       "      <td>548.032945</td>\n",
+       "      <td>19.515751</td>\n",
+       "      <td>69.466546</td>\n",
+       "      <td>147.747689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37.800175</td>\n",
-       "      <td>-121.097883</td>\n",
-       "      <td>64.545603</td>\n",
+       "      <td>37.852811</td>\n",
+       "      <td>-121.572438</td>\n",
+       "      <td>52.355375</td>\n",
        "      <td>0.0003</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.963388</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.790472</td>\n",
-       "      <td>0.237141</td>\n",
+       "      <td>4.756672</td>\n",
        "      <td>True</td>\n",
+       "      <td>1.620925</td>\n",
+       "      <td>0.486278</td>\n",
        "      <td>False</td>\n",
-       "      <td>21.566685</td>\n",
-       "      <td>48.878612</td>\n",
-       "      <td>143.937188</td>\n",
+       "      <td>False</td>\n",
+       "      <td>24.445977</td>\n",
+       "      <td>46.264885</td>\n",
+       "      <td>129.928270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37.800175</td>\n",
-       "      <td>-121.097882</td>\n",
-       "      <td>64.545603</td>\n",
+       "      <td>37.852811</td>\n",
+       "      <td>-121.572437</td>\n",
+       "      <td>52.355375</td>\n",
        "      <td>0.0006</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.989108</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.419237</td>\n",
-       "      <td>0.425771</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>23.682128</td>\n",
-       "      <td>40.768480</td>\n",
-       "      <td>885.282708</td>\n",
+       "      <td>0.712118</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.550108</td>\n",
+       "      <td>1.065032</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>12.375221</td>\n",
+       "      <td>52.270249</td>\n",
+       "      <td>192.439571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>37.800175</td>\n",
-       "      <td>-121.097881</td>\n",
-       "      <td>64.545603</td>\n",
+       "      <td>37.852811</td>\n",
+       "      <td>-121.572436</td>\n",
+       "      <td>52.355375</td>\n",
        "      <td>0.0009</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.974619</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.031683</td>\n",
-       "      <td>0.909505</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.224535</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.835126</td>\n",
+       "      <td>1.450538</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>12.368550</td>\n",
-       "      <td>61.984188</td>\n",
-       "      <td>828.878655</td>\n",
+       "      <td>21.161813</td>\n",
+       "      <td>66.718895</td>\n",
+       "      <td>441.660815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37.800175</td>\n",
-       "      <td>-121.097880</td>\n",
-       "      <td>64.545603</td>\n",
+       "      <td>37.852811</td>\n",
+       "      <td>-121.572435</td>\n",
+       "      <td>52.355375</td>\n",
        "      <td>0.0012</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.768380</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.644805</td>\n",
-       "      <td>0.793441</td>\n",
        "      <td>False</td>\n",
+       "      <td>1.514108</td>\n",
        "      <td>True</td>\n",
-       "      <td>12.676042</td>\n",
-       "      <td>55.157313</td>\n",
-       "      <td>798.250031</td>\n",
+       "      <td>3.214580</td>\n",
+       "      <td>0.964374</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>23.299301</td>\n",
+       "      <td>35.738891</td>\n",
+       "      <td>681.076538</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -173,25 +173,25 @@
       ],
       "text/plain": [
        "    Latitude   Longitude   Altitude  Distance  Alignment  Distance_Sensors  \\\n",
-       "0  37.800175 -121.097884  64.545603    0.0000      False          1.423923   \n",
-       "1  37.800175 -121.097883  64.545603    0.0003      False          2.963388   \n",
-       "2  37.800175 -121.097882  64.545603    0.0006       True          2.989108   \n",
-       "3  37.800175 -121.097881  64.545603    0.0009      False          1.974619   \n",
-       "4  37.800175 -121.097880  64.545603    0.0012       True          3.768380   \n",
+       "0  37.852811 -121.572439  52.355375    0.0000      False          3.525967   \n",
+       "1  37.852811 -121.572438  52.355375    0.0003       True          4.756672   \n",
+       "2  37.852811 -121.572437  52.355375    0.0006      False          0.712118   \n",
+       "3  37.852811 -121.572436  52.355375    0.0009       True          2.224535   \n",
+       "4  37.852811 -121.572435  52.355375    0.0012      False          1.514108   \n",
        "\n",
        "   Proximity  Wheel_Speed  Velocity  Hall_Effect  Emergency_Stop  Temperature  \\\n",
-       "0      False     2.307947  0.692384        False           False    31.484825   \n",
-       "1       True     0.790472  0.237141         True           False    21.566685   \n",
-       "2       True     1.419237  0.425771        False           False    23.682128   \n",
-       "3      False     3.031683  0.909505         True           False    12.368550   \n",
-       "4       True     2.644805  0.793441        False            True    12.676042   \n",
+       "0       True     3.185937  0.955781        False           False    19.515751   \n",
+       "1       True     1.620925  0.486278        False           False    24.445977   \n",
+       "2       True     3.550108  1.065032         True            True    12.375221   \n",
+       "3       True     4.835126  1.450538         True           False    21.161813   \n",
+       "4       True     3.214580  0.964374         True           False    23.299301   \n",
        "\n",
        "    Humidity  Light_Level  \n",
-       "0  31.292792   548.032945  \n",
-       "1  48.878612   143.937188  \n",
-       "2  40.768480   885.282708  \n",
-       "3  61.984188   828.878655  \n",
-       "4  55.157313   798.250031  "
+       "0  69.466546   147.747689  \n",
+       "1  46.264885   129.928270  \n",
+       "2  52.270249   192.439571  \n",
+       "3  66.718895   441.660815  \n",
+       "4  35.738891   681.076538  "
       ]
      },
      "execution_count": 3,
@@ -314,94 +314,94 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>37.532890</td>\n",
-       "      <td>-121.513446</td>\n",
-       "      <td>45.886560</td>\n",
+       "      <td>37.418966</td>\n",
+       "      <td>-121.597137</td>\n",
+       "      <td>52.356226</td>\n",
        "      <td>0.149850</td>\n",
-       "      <td>2.753068</td>\n",
-       "      <td>2.735528</td>\n",
-       "      <td>0.820658</td>\n",
-       "      <td>22.495055</td>\n",
-       "      <td>50.094133</td>\n",
-       "      <td>499.691181</td>\n",
+       "      <td>2.748821</td>\n",
+       "      <td>2.749783</td>\n",
+       "      <td>0.824935</td>\n",
+       "      <td>22.472888</td>\n",
+       "      <td>49.971703</td>\n",
+       "      <td>498.657612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.287010</td>\n",
-       "      <td>0.289524</td>\n",
-       "      <td>28.732712</td>\n",
+       "      <td>0.298670</td>\n",
+       "      <td>0.310063</td>\n",
+       "      <td>27.750864</td>\n",
        "      <td>0.086603</td>\n",
-       "      <td>1.302263</td>\n",
-       "      <td>1.300918</td>\n",
-       "      <td>0.390276</td>\n",
-       "      <td>7.204729</td>\n",
-       "      <td>11.553234</td>\n",
-       "      <td>289.635940</td>\n",
+       "      <td>1.299671</td>\n",
+       "      <td>1.300411</td>\n",
+       "      <td>0.390123</td>\n",
+       "      <td>7.242958</td>\n",
+       "      <td>11.571847</td>\n",
+       "      <td>288.051266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>37.013684</td>\n",
-       "      <td>-121.998479</td>\n",
-       "      <td>0.575104</td>\n",
+       "      <td>37.007134</td>\n",
+       "      <td>-121.998704</td>\n",
+       "      <td>0.814268</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.500120</td>\n",
-       "      <td>0.500025</td>\n",
-       "      <td>0.150008</td>\n",
-       "      <td>10.000930</td>\n",
-       "      <td>30.000076</td>\n",
-       "      <td>0.059913</td>\n",
+       "      <td>0.500130</td>\n",
+       "      <td>0.500098</td>\n",
+       "      <td>0.150029</td>\n",
+       "      <td>10.000107</td>\n",
+       "      <td>30.001439</td>\n",
+       "      <td>0.011402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>37.363493</td>\n",
-       "      <td>-121.760702</td>\n",
-       "      <td>24.731299</td>\n",
+       "      <td>37.121428</td>\n",
+       "      <td>-121.866625</td>\n",
+       "      <td>28.797280</td>\n",
        "      <td>0.074925</td>\n",
-       "      <td>1.624056</td>\n",
-       "      <td>1.608859</td>\n",
-       "      <td>0.482658</td>\n",
-       "      <td>16.262349</td>\n",
-       "      <td>40.094638</td>\n",
-       "      <td>248.920004</td>\n",
+       "      <td>1.621144</td>\n",
+       "      <td>1.623092</td>\n",
+       "      <td>0.486928</td>\n",
+       "      <td>16.244802</td>\n",
+       "      <td>39.959915</td>\n",
+       "      <td>246.886811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>37.532434</td>\n",
-       "      <td>-121.496134</td>\n",
-       "      <td>45.878943</td>\n",
+       "      <td>37.415549</td>\n",
+       "      <td>-121.657832</td>\n",
+       "      <td>52.170024</td>\n",
        "      <td>0.149850</td>\n",
-       "      <td>2.754404</td>\n",
-       "      <td>2.720220</td>\n",
-       "      <td>0.816066</td>\n",
-       "      <td>22.517037</td>\n",
-       "      <td>50.162426</td>\n",
-       "      <td>500.020790</td>\n",
+       "      <td>2.743305</td>\n",
+       "      <td>2.751643</td>\n",
+       "      <td>0.825493</td>\n",
+       "      <td>22.403462</td>\n",
+       "      <td>49.968997</td>\n",
+       "      <td>500.836109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>37.792310</td>\n",
-       "      <td>-121.296507</td>\n",
-       "      <td>73.942745</td>\n",
+       "      <td>37.656867</td>\n",
+       "      <td>-121.282915</td>\n",
+       "      <td>79.472374</td>\n",
        "      <td>0.224775</td>\n",
-       "      <td>3.889643</td>\n",
-       "      <td>3.862012</td>\n",
-       "      <td>1.158604</td>\n",
-       "      <td>28.691437</td>\n",
-       "      <td>60.184927</td>\n",
-       "      <td>750.370008</td>\n",
+       "      <td>3.871313</td>\n",
+       "      <td>3.878636</td>\n",
+       "      <td>1.163591</td>\n",
+       "      <td>28.800494</td>\n",
+       "      <td>60.021020</td>\n",
+       "      <td>746.956417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>37.997699</td>\n",
-       "      <td>-121.015688</td>\n",
-       "      <td>99.024772</td>\n",
+       "      <td>37.992811</td>\n",
+       "      <td>-121.001388</td>\n",
+       "      <td>98.772346</td>\n",
        "      <td>0.299700</td>\n",
-       "      <td>4.999694</td>\n",
-       "      <td>4.999887</td>\n",
-       "      <td>1.499966</td>\n",
-       "      <td>34.999655</td>\n",
-       "      <td>69.998836</td>\n",
-       "      <td>999.952636</td>\n",
+       "      <td>4.999977</td>\n",
+       "      <td>4.999840</td>\n",
+       "      <td>1.499952</td>\n",
+       "      <td>34.999474</td>\n",
+       "      <td>69.999612</td>\n",
+       "      <td>999.987439</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,33 +410,33 @@
       "text/plain": [
        "           Latitude     Longitude      Altitude      Distance  \\\n",
        "count  50000.000000  50000.000000  50000.000000  50000.000000   \n",
-       "mean      37.532890   -121.513446     45.886560      0.149850   \n",
-       "std        0.287010      0.289524     28.732712      0.086603   \n",
-       "min       37.013684   -121.998479      0.575104      0.000000   \n",
-       "25%       37.363493   -121.760702     24.731299      0.074925   \n",
-       "50%       37.532434   -121.496134     45.878943      0.149850   \n",
-       "75%       37.792310   -121.296507     73.942745      0.224775   \n",
-       "max       37.997699   -121.015688     99.024772      0.299700   \n",
+       "mean      37.418966   -121.597137     52.356226      0.149850   \n",
+       "std        0.298670      0.310063     27.750864      0.086603   \n",
+       "min       37.007134   -121.998704      0.814268      0.000000   \n",
+       "25%       37.121428   -121.866625     28.797280      0.074925   \n",
+       "50%       37.415549   -121.657832     52.170024      0.149850   \n",
+       "75%       37.656867   -121.282915     79.472374      0.224775   \n",
+       "max       37.992811   -121.001388     98.772346      0.299700   \n",
        "\n",
        "       Distance_Sensors   Wheel_Speed      Velocity   Temperature  \\\n",
        "count      50000.000000  50000.000000  50000.000000  50000.000000   \n",
-       "mean           2.753068      2.735528      0.820658     22.495055   \n",
-       "std            1.302263      1.300918      0.390276      7.204729   \n",
-       "min            0.500120      0.500025      0.150008     10.000930   \n",
-       "25%            1.624056      1.608859      0.482658     16.262349   \n",
-       "50%            2.754404      2.720220      0.816066     22.517037   \n",
-       "75%            3.889643      3.862012      1.158604     28.691437   \n",
-       "max            4.999694      4.999887      1.499966     34.999655   \n",
+       "mean           2.748821      2.749783      0.824935     22.472888   \n",
+       "std            1.299671      1.300411      0.390123      7.242958   \n",
+       "min            0.500130      0.500098      0.150029     10.000107   \n",
+       "25%            1.621144      1.623092      0.486928     16.244802   \n",
+       "50%            2.743305      2.751643      0.825493     22.403462   \n",
+       "75%            3.871313      3.878636      1.163591     28.800494   \n",
+       "max            4.999977      4.999840      1.499952     34.999474   \n",
        "\n",
        "           Humidity   Light_Level  \n",
        "count  50000.000000  50000.000000  \n",
-       "mean      50.094133    499.691181  \n",
-       "std       11.553234    289.635940  \n",
-       "min       30.000076      0.059913  \n",
-       "25%       40.094638    248.920004  \n",
-       "50%       50.162426    500.020790  \n",
-       "75%       60.184927    750.370008  \n",
-       "max       69.998836    999.952636  "
+       "mean      49.971703    498.657612  \n",
+       "std       11.571847    288.051266  \n",
+       "min       30.001439      0.011402  \n",
+       "25%       39.959915    246.886811  \n",
+       "50%       49.968997    500.836109  \n",
+       "75%       60.021020    746.956417  \n",
+       "max       69.999612    999.987439  "
       ]
      },
      "execution_count": 6,
@@ -588,18 +588,18 @@
    "outputs": [],
    "source": [
     "# Define acceptable distance thresholds for chaining \n",
-    "max_distance = 0.5 \n",
-    "min_distance = 0.15\n",
+    "max_distance = 5 \n",
+    "min_distance = 0.5\n",
     "\n",
     "# Cart wheel speed treshold in meters per second (m/s) for chaining \n",
-    "high_speed = 2.5\n",
+    "high_speed = 3.5\n",
     "\n",
     "# Define conditions for chaining based on the data\n",
     "chaining_conditions = [\n",
-    "    alignment and distance > min_distance and distance < max_distance and not proximity and wheel_speed < high_speed and safety_label == \"Safe\"\n",
+    "    alignment and distance > min_distance and distance < max_distance and proximity and wheel_speed < high_speed and safety_label == \"Safe\"\n",
     "    for alignment, distance, proximity, safety_label, wheel_speed in zip(\n",
     "        df[\"Alignment\"],\n",
-    "        df[\"Distance\"],\n",
+    "        df[\"Distance_Sensors\"],\n",
     "        df[\"Proximity\"],\n",
     "        df[\"Safety_Label\"],\n",
     "        df['Wheel_Speed']\n",
