--- a/Data Science/Data/data_generator.ipynb
+++ b/Data Science/Data/data_generator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
     "alignment_data = []\n",
     "\n",
     "for cart_index in range(num_carts):\n",
-    "    alignments = np.random.choice([True, False], num_steps_per_cart)\n",
+    "    alignments = np.random.choice([True, False], num_steps_per_cart, p=[0.7, 0.3])\n",
     "    alignment_data.extend(alignments)\n",
     "\n",
     "# Load previously generated combined data\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
     "proximity_data = []\n",
     "\n",
     "for cart_index in range(num_carts):\n",
-    "    proximities = np.random.choice([True, False], num_steps_per_cart)\n",
+    "    proximities = np.random.choice([True, False], num_steps_per_cart, p=[0.7, 0.3])\n",
     "    proximity_data.extend(proximities)\n",
     "\n",
     "# Load previously generated combined data with alignment\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -232,14 +232,14 @@
     "hall_effect_data = []\n",
     "\n",
     "for cart_index in range(num_carts):\n",
-    "    hall_effects = np.random.choice([True, False], num_steps_per_cart)\n",
+    "    hall_effects = np.random.choice([True, False], num_steps_per_cart, p=[0.7, 0.3])\n",
     "    hall_effect_data.extend(hall_effects)\n",
     "\n",
     "# Simulate emergency stop button data for each cart\n",
     "emergency_stop_data = []\n",
     "\n",
     "for cart_index in range(num_carts):\n",
-    "    emergency_stops = np.random.choice([True, False], num_steps_per_cart)\n",
+    "    emergency_stops = np.random.choice([True, False], num_steps_per_cart, p=[0.3, 0.7])\n",
     "    emergency_stop_data.extend(emergency_stops)\n",
     "\n",
     "# Load previously generated combined data with velocity\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
