--- a/Data Science/Code/data_analysis.ipynb
+++ b/Data Science/Code/data_analysis.ipynb
@@ -546,7 +546,7 @@
    "outputs": [],
    "source": [
     "# Speed thresholds (in meters per second - m/s)\n",
-    "threshold_high_speed = 1.5  \n",
+    "threshold_high_speed = 3.5  \n",
     "\n",
     "# Distance thresholds (in meter)\n",
     "threshold_low_distance = 0.5 \n",
@@ -588,15 +588,15 @@
    "outputs": [],
    "source": [
     "# Define acceptable distance thresholds for chaining \n",
-    "max_distance = 5 \n",
+    "max_distance = 3 \n",
     "min_distance = 0.5\n",
     "\n",
     "# Cart wheel speed treshold in meters per second (m/s) for chaining \n",
-    "high_speed = 3.5\n",
+    "high_speed = 2.5\n",
     "\n",
     "# Define conditions for chaining based on the data\n",
     "chaining_conditions = [\n",
-    "    alignment and distance > min_distance and distance < max_distance and proximity and wheel_speed < high_speed and safety_label == \"Safe\"\n",
+    "    alignment and distance > min_distance and distance < max_distance and not proximity and wheel_speed < high_speed and safety_label == \"Safe\"\n",
     "    for alignment, distance, proximity, safety_label, wheel_speed in zip(\n",
     "        df[\"Alignment\"],\n",
     "        df[\"Distance_Sensors\"],\n",
