--- a/Data Science/Code/data_analysis.ipynb
+++ b/Data Science/Code/data_analysis.ipynb
@@ -84,88 +84,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37.852811</td>\n",
-       "      <td>-121.572439</td>\n",
-       "      <td>52.355375</td>\n",
+       "      <td>37.775375</td>\n",
+       "      <td>-121.897747</td>\n",
+       "      <td>73.071218</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.525967</td>\n",
        "      <td>True</td>\n",
-       "      <td>3.185937</td>\n",
-       "      <td>0.955781</td>\n",
+       "      <td>3.255424</td>\n",
        "      <td>False</td>\n",
+       "      <td>4.750051</td>\n",
+       "      <td>1.425015</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>19.515751</td>\n",
-       "      <td>69.466546</td>\n",
-       "      <td>147.747689</td>\n",
+       "      <td>22.780391</td>\n",
+       "      <td>51.359185</td>\n",
+       "      <td>576.224848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37.852811</td>\n",
-       "      <td>-121.572438</td>\n",
-       "      <td>52.355375</td>\n",
+       "      <td>37.775375</td>\n",
+       "      <td>-121.897746</td>\n",
+       "      <td>73.071218</td>\n",
        "      <td>0.0003</td>\n",
        "      <td>True</td>\n",
-       "      <td>4.756672</td>\n",
+       "      <td>2.279579</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.195034</td>\n",
+       "      <td>0.658510</td>\n",
        "      <td>True</td>\n",
-       "      <td>1.620925</td>\n",
-       "      <td>0.486278</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>24.445977</td>\n",
-       "      <td>46.264885</td>\n",
-       "      <td>129.928270</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10.547808</td>\n",
+       "      <td>33.711211</td>\n",
+       "      <td>935.633297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37.852811</td>\n",
-       "      <td>-121.572437</td>\n",
-       "      <td>52.355375</td>\n",
+       "      <td>37.775375</td>\n",
+       "      <td>-121.897745</td>\n",
+       "      <td>73.071218</td>\n",
        "      <td>0.0006</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.172817</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.777403</td>\n",
+       "      <td>1.133221</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.712118</td>\n",
        "      <td>True</td>\n",
-       "      <td>3.550108</td>\n",
-       "      <td>1.065032</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>12.375221</td>\n",
-       "      <td>52.270249</td>\n",
-       "      <td>192.439571</td>\n",
+       "      <td>13.817581</td>\n",
+       "      <td>49.588575</td>\n",
+       "      <td>654.387359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>37.852811</td>\n",
-       "      <td>-121.572436</td>\n",
-       "      <td>52.355375</td>\n",
+       "      <td>37.775375</td>\n",
+       "      <td>-121.897744</td>\n",
+       "      <td>73.071218</td>\n",
        "      <td>0.0009</td>\n",
        "      <td>True</td>\n",
-       "      <td>2.224535</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4.835126</td>\n",
-       "      <td>1.450538</td>\n",
+       "      <td>1.358142</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.186756</td>\n",
+       "      <td>0.356027</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>21.161813</td>\n",
-       "      <td>66.718895</td>\n",
-       "      <td>441.660815</td>\n",
+       "      <td>19.249456</td>\n",
+       "      <td>32.246666</td>\n",
+       "      <td>159.293949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37.852811</td>\n",
-       "      <td>-121.572435</td>\n",
-       "      <td>52.355375</td>\n",
+       "      <td>37.775375</td>\n",
+       "      <td>-121.897743</td>\n",
+       "      <td>73.071218</td>\n",
        "      <td>0.0012</td>\n",
        "      <td>False</td>\n",
-       "      <td>1.514108</td>\n",
+       "      <td>0.579548</td>\n",
        "      <td>True</td>\n",
-       "      <td>3.214580</td>\n",
-       "      <td>0.964374</td>\n",
+       "      <td>2.024538</td>\n",
+       "      <td>0.607362</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>23.299301</td>\n",
-       "      <td>35.738891</td>\n",
-       "      <td>681.076538</td>\n",
+       "      <td>True</td>\n",
+       "      <td>11.694243</td>\n",
+       "      <td>63.618960</td>\n",
+       "      <td>442.111798</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -173,25 +173,25 @@
       ],
       "text/plain": [
        "    Latitude   Longitude   Altitude  Distance  Alignment  Distance_Sensors  \\\n",
-       "0  37.852811 -121.572439  52.355375    0.0000      False          3.525967   \n",
-       "1  37.852811 -121.572438  52.355375    0.0003       True          4.756672   \n",
-       "2  37.852811 -121.572437  52.355375    0.0006      False          0.712118   \n",
-       "3  37.852811 -121.572436  52.355375    0.0009       True          2.224535   \n",
-       "4  37.852811 -121.572435  52.355375    0.0012      False          1.514108   \n",
+       "0  37.775375 -121.897747  73.071218    0.0000       True          3.255424   \n",
+       "1  37.775375 -121.897746  73.071218    0.0003       True          2.279579   \n",
+       "2  37.775375 -121.897745  73.071218    0.0006       True          2.172817   \n",
+       "3  37.775375 -121.897744  73.071218    0.0009       True          1.358142   \n",
+       "4  37.775375 -121.897743  73.071218    0.0012      False          0.579548   \n",
        "\n",
        "   Proximity  Wheel_Speed  Velocity  Hall_Effect  Emergency_Stop  Temperature  \\\n",
-       "0       True     3.185937  0.955781        False           False    19.515751   \n",
-       "1       True     1.620925  0.486278        False           False    24.445977   \n",
-       "2       True     3.550108  1.065032         True            True    12.375221   \n",
-       "3       True     4.835126  1.450538         True           False    21.161813   \n",
-       "4       True     3.214580  0.964374         True           False    23.299301   \n",
+       "0      False     4.750051  1.425015         True           False    22.780391   \n",
+       "1      False     2.195034  0.658510         True            True    10.547808   \n",
+       "2       True     3.777403  1.133221        False            True    13.817581   \n",
+       "3      False     1.186756  0.356027         True           False    19.249456   \n",
+       "4       True     2.024538  0.607362         True            True    11.694243   \n",
        "\n",
        "    Humidity  Light_Level  \n",
-       "0  69.466546   147.747689  \n",
-       "1  46.264885   129.928270  \n",
-       "2  52.270249   192.439571  \n",
-       "3  66.718895   441.660815  \n",
-       "4  35.738891   681.076538  "
+       "0  51.359185   576.224848  \n",
+       "1  33.711211   935.633297  \n",
+       "2  49.588575   654.387359  \n",
+       "3  32.246666   159.293949  \n",
+       "4  63.618960   442.111798  "
       ]
      },
      "execution_count": 3,
@@ -314,94 +314,94 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>37.418966</td>\n",
-       "      <td>-121.597137</td>\n",
-       "      <td>52.356226</td>\n",
+       "      <td>37.517701</td>\n",
+       "      <td>-121.497456</td>\n",
+       "      <td>47.339932</td>\n",
        "      <td>0.149850</td>\n",
-       "      <td>2.748821</td>\n",
-       "      <td>2.749783</td>\n",
-       "      <td>0.824935</td>\n",
-       "      <td>22.472888</td>\n",
-       "      <td>49.971703</td>\n",
-       "      <td>498.657612</td>\n",
+       "      <td>2.247534</td>\n",
+       "      <td>2.751998</td>\n",
+       "      <td>0.825600</td>\n",
+       "      <td>22.504581</td>\n",
+       "      <td>49.975236</td>\n",
+       "      <td>500.511602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.298670</td>\n",
-       "      <td>0.310063</td>\n",
-       "      <td>27.750864</td>\n",
+       "      <td>0.271785</td>\n",
+       "      <td>0.290099</td>\n",
+       "      <td>30.564202</td>\n",
        "      <td>0.086603</td>\n",
-       "      <td>1.299671</td>\n",
-       "      <td>1.300411</td>\n",
-       "      <td>0.390123</td>\n",
-       "      <td>7.242958</td>\n",
-       "      <td>11.571847</td>\n",
-       "      <td>288.051266</td>\n",
+       "      <td>1.012972</td>\n",
+       "      <td>1.298840</td>\n",
+       "      <td>0.389652</td>\n",
+       "      <td>7.222354</td>\n",
+       "      <td>11.521304</td>\n",
+       "      <td>289.707753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>37.007134</td>\n",
-       "      <td>-121.998704</td>\n",
-       "      <td>0.814268</td>\n",
+       "      <td>37.004829</td>\n",
+       "      <td>-121.978642</td>\n",
+       "      <td>0.265895</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.500130</td>\n",
-       "      <td>0.500098</td>\n",
-       "      <td>0.150029</td>\n",
-       "      <td>10.000107</td>\n",
-       "      <td>30.001439</td>\n",
-       "      <td>0.011402</td>\n",
+       "      <td>0.500005</td>\n",
+       "      <td>0.500162</td>\n",
+       "      <td>0.150049</td>\n",
+       "      <td>10.000035</td>\n",
+       "      <td>30.000116</td>\n",
+       "      <td>0.004272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>37.121428</td>\n",
-       "      <td>-121.866625</td>\n",
-       "      <td>28.797280</td>\n",
+       "      <td>37.300933</td>\n",
+       "      <td>-121.745357</td>\n",
+       "      <td>18.167668</td>\n",
        "      <td>0.074925</td>\n",
-       "      <td>1.621144</td>\n",
-       "      <td>1.623092</td>\n",
-       "      <td>0.486928</td>\n",
-       "      <td>16.244802</td>\n",
-       "      <td>39.959915</td>\n",
-       "      <td>246.886811</td>\n",
+       "      <td>1.368943</td>\n",
+       "      <td>1.626524</td>\n",
+       "      <td>0.487957</td>\n",
+       "      <td>16.237724</td>\n",
+       "      <td>39.933769</td>\n",
+       "      <td>248.501353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>37.415549</td>\n",
-       "      <td>-121.657832</td>\n",
-       "      <td>52.170024</td>\n",
+       "      <td>37.511985</td>\n",
+       "      <td>-121.496175</td>\n",
+       "      <td>43.877131</td>\n",
        "      <td>0.149850</td>\n",
-       "      <td>2.743305</td>\n",
-       "      <td>2.751643</td>\n",
-       "      <td>0.825493</td>\n",
-       "      <td>22.403462</td>\n",
-       "      <td>49.968997</td>\n",
-       "      <td>500.836109</td>\n",
+       "      <td>2.245186</td>\n",
+       "      <td>2.749673</td>\n",
+       "      <td>0.824902</td>\n",
+       "      <td>22.540286</td>\n",
+       "      <td>50.028937</td>\n",
+       "      <td>500.215745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>37.656867</td>\n",
-       "      <td>-121.282915</td>\n",
-       "      <td>79.472374</td>\n",
+       "      <td>37.744905</td>\n",
+       "      <td>-121.240882</td>\n",
+       "      <td>80.082263</td>\n",
        "      <td>0.224775</td>\n",
-       "      <td>3.871313</td>\n",
-       "      <td>3.878636</td>\n",
-       "      <td>1.163591</td>\n",
-       "      <td>28.800494</td>\n",
-       "      <td>60.021020</td>\n",
-       "      <td>746.956417</td>\n",
+       "      <td>3.131072</td>\n",
+       "      <td>3.873745</td>\n",
+       "      <td>1.162123</td>\n",
+       "      <td>28.746879</td>\n",
+       "      <td>59.893651</td>\n",
+       "      <td>751.693333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>37.992811</td>\n",
-       "      <td>-121.001388</td>\n",
-       "      <td>98.772346</td>\n",
+       "      <td>38.000110</td>\n",
+       "      <td>-121.002638</td>\n",
+       "      <td>99.998455</td>\n",
        "      <td>0.299700</td>\n",
-       "      <td>4.999977</td>\n",
-       "      <td>4.999840</td>\n",
-       "      <td>1.499952</td>\n",
-       "      <td>34.999474</td>\n",
-       "      <td>69.999612</td>\n",
-       "      <td>999.987439</td>\n",
+       "      <td>3.999987</td>\n",
+       "      <td>4.999683</td>\n",
+       "      <td>1.499905</td>\n",
+       "      <td>34.998557</td>\n",
+       "      <td>69.998334</td>\n",
+       "      <td>999.908330</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,33 +410,33 @@
       "text/plain": [
        "           Latitude     Longitude      Altitude      Distance  \\\n",
        "count  50000.000000  50000.000000  50000.000000  50000.000000   \n",
-       "mean      37.418966   -121.597137     52.356226      0.149850   \n",
-       "std        0.298670      0.310063     27.750864      0.086603   \n",
-       "min       37.007134   -121.998704      0.814268      0.000000   \n",
-       "25%       37.121428   -121.866625     28.797280      0.074925   \n",
-       "50%       37.415549   -121.657832     52.170024      0.149850   \n",
-       "75%       37.656867   -121.282915     79.472374      0.224775   \n",
-       "max       37.992811   -121.001388     98.772346      0.299700   \n",
+       "mean      37.517701   -121.497456     47.339932      0.149850   \n",
+       "std        0.271785      0.290099     30.564202      0.086603   \n",
+       "min       37.004829   -121.978642      0.265895      0.000000   \n",
+       "25%       37.300933   -121.745357     18.167668      0.074925   \n",
+       "50%       37.511985   -121.496175     43.877131      0.149850   \n",
+       "75%       37.744905   -121.240882     80.082263      0.224775   \n",
+       "max       38.000110   -121.002638     99.998455      0.299700   \n",
        "\n",
        "       Distance_Sensors   Wheel_Speed      Velocity   Temperature  \\\n",
        "count      50000.000000  50000.000000  50000.000000  50000.000000   \n",
-       "mean           2.748821      2.749783      0.824935     22.472888   \n",
-       "std            1.299671      1.300411      0.390123      7.242958   \n",
-       "min            0.500130      0.500098      0.150029     10.000107   \n",
-       "25%            1.621144      1.623092      0.486928     16.244802   \n",
-       "50%            2.743305      2.751643      0.825493     22.403462   \n",
-       "75%            3.871313      3.878636      1.163591     28.800494   \n",
-       "max            4.999977      4.999840      1.499952     34.999474   \n",
+       "mean           2.247534      2.751998      0.825600     22.504581   \n",
+       "std            1.012972      1.298840      0.389652      7.222354   \n",
+       "min            0.500005      0.500162      0.150049     10.000035   \n",
+       "25%            1.368943      1.626524      0.487957     16.237724   \n",
+       "50%            2.245186      2.749673      0.824902     22.540286   \n",
+       "75%            3.131072      3.873745      1.162123     28.746879   \n",
+       "max            3.999987      4.999683      1.499905     34.998557   \n",
        "\n",
        "           Humidity   Light_Level  \n",
        "count  50000.000000  50000.000000  \n",
-       "mean      49.971703    498.657612  \n",
-       "std       11.571847    288.051266  \n",
-       "min       30.001439      0.011402  \n",
-       "25%       39.959915    246.886811  \n",
-       "50%       49.968997    500.836109  \n",
-       "75%       60.021020    746.956417  \n",
-       "max       69.999612    999.987439  "
+       "mean      49.975236    500.511602  \n",
+       "std       11.521304    289.707753  \n",
+       "min       30.000116      0.004272  \n",
+       "25%       39.933769    248.501353  \n",
+       "50%       50.028937    500.215745  \n",
+       "75%       59.893651    751.693333  \n",
+       "max       69.998334    999.908330  "
       ]
      },
      "execution_count": 6,
@@ -549,7 +549,7 @@
     "threshold_high_speed = 3.5  \n",
     "\n",
     "# Distance thresholds (in meter)\n",
-    "threshold_low_distance = 0.5 \n",
+    "threshold_low_distance = 1\n",
     "\n",
     "# Temperature thresholds (in degrees Celsius)\n",
     "threshold_high_temperature = 30 \n",
@@ -561,7 +561,7 @@
     "collision_risk_levels = []\n",
     "\n",
     "for distance, proximity, wheel_speed, temperature, light_level in zip(\n",
-    "    df[\"Distance\"],\n",
+    "    df[\"Distance_Sensors\"],\n",
     "    df[\"Proximity\"],\n",
     "    df[\"Wheel_Speed\"],\n",
     "    df[\"Temperature\"],\n",
@@ -592,7 +592,7 @@
     "min_distance = 0.5\n",
     "\n",
     "# Cart wheel speed treshold in meters per second (m/s) for chaining \n",
-    "high_speed = 2.5\n",
+    "high_speed = 3.5\n",
     "\n",
     "# Define conditions for chaining based on the data\n",
     "chaining_conditions = [\n",
